added header part

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
- <h2>G3 Architects</h2>
- <nav>
+<nav>
+    <h2 class="nav-heading">G3 Architects</h2>
     <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
@@ -17,13 +17,20 @@
         <li><a href=""> Login</a></li>
     </ul>
  </nav>
+ <div class="banner">
+    <div class="banner-content">
+        <h1 class="banner-heading">Brand New 
+        Group of Architects </h1>
+        <p class="banner-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nesciunt ad fugiat sint magnam voluptate at! Delectus vel reiciendis a aliquam quaerat, rerum sunt beatae assumenda corporis ad! Id, dolores!</p>
+        <button class="btn-primary"> Explore More
+        </button> </div>
+        <img src="images/banner.png" alt="">
+ </div>
     </header> 
+
                    <!-- main works -->
     <main>
-      <h2>Brand New 
-        Group of Architects 
-        </h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam ullam minus exercitationem corrupti ipsa voluptatibus soluta omnis recusandae quaerat deserunt illum dignissimos, culpa quis. Distinctio quas tenetur saepe qui vel.</p>
+    
     </main>
     <footer>
 
