--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
         <img src="images/banner.png" alt="">
  </div>
     </header> 
+                   
+    <main>            <!-- main works -->
+      <!-- first features  -->
+    <section class="first-feature">
+        <div class="part-one">
+       <img src="images/team1.png" alt="">
+       <img src="images/team2.png" alt="">
+       <img src="images/team3.png" alt="">
+       <img src="images/team4.png" alt="">
+        </div>
 
-                   <!-- main works -->
-    <main>
-    
+        <div class="part-two" >
+<div class="teams-description"><h2 >Quick list <span class="of-our-span">of Our</span><span class="feature-span"> Features</span></h2></div>
+<p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<button class="btn-primary">Explore more</button>
+        </div>
+
+    </section>
+
     </main>
     <footer>
 
